First iteration of hatching pokemon

--- a/CatchEm/CatchEm.csproj
+++ b/CatchEm/CatchEm.csproj
@@ -41,6 +41,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Pokemon\HatchingPokemon.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
